@@ -109,11 +109,13 @@ if ($_POST) {
 		header("Location: disks_zfs_dataset.php");
 		exit;
 	}
+	if (!isset($_POST['pool']))
+		$pconfig['pool'] = "";
 
 	// Input validation
-	$reqdfields = explode(" ", "name");
-	$reqdfieldsn = array(gettext("Name"));
-	$reqdfieldst = explode(" ", "string");
+	$reqdfields = explode(" ", "pool name");
+	$reqdfieldsn = array(gettext("Pool"), gettext("Name"));
+	$reqdfieldst = explode(" ", "string string");
 
 	do_input_validation($_POST, $reqdfields, $reqdfieldsn, $input_errors);
 	do_input_validation_type($_POST, $reqdfields, $reqdfieldsn, $reqdfieldst, $input_errors);
